Redirect Retry Targeter